# MOAI_GPU

./: .gitignore  CMakeLists.txt  README.md  bench_micro_boot_ct_ct.tsv
doc/: ckks_scalar_broadcast_encode_v2.md  ckks_uniform_encode_fast_path_handoff.md  ct_pt_scalar_broadcast_v2_worklog_no_git.md  gelu_hmult_bsgs.md  keyswitch_engine_model_cycles.md  layernorm_moai_summary.md  micro_profile_operations_index.md  micro_profile_playbook.md  moai_accelerator_simulator_analysis.md  moai_neo_style_simulator_design.md  otf_evalkey_a_and_evalkey_generation_notes.md  simulator_guide.md
keys/: README.md
md/: CONDA_SETUP.md  HYBRID_KEY_SWITCHING.md  OTF_EVK_A_PRNG_ENGINE.md  hybrid_ks_profile_worklog.md  hybrid_ks_sim_op_counts.md
output/ct_pt/: ct_pt_micro_index.tsv  ct_pt_micro_run1.kern_sum.mul_nvtx.tsv  ct_pt_micro_run1.kern_sum.mul_nvtx_clean.tsv  ct_pt_micro_run1.kern_sum.tsv  ct_pt_micro_run1_kern_sum_mul_nvtx_kernel_analysis.md
src/: test.cu
src/include/: include.cuh
src/include/keys/: moai_precomputed_keys.cuh
src/include/source/: ckks_evaluator_parallel.cuh
src/include/source/att_block/: single_att_block.cuh
src/include/source/bootstrapping/common/: Remez.cu
src/include/source/matrix_mul/: Ct_ct_matrix_mul.cuh  Ct_pt_matrix_mul.cuh
src/include/source/non_linear_func/: layernorm.cuh  softmax.cuh
src/include/source/sim/: engine_config.h  engine_model.h  keyswitch_op_profile.h  prng_evalkey_a.h  sim_ckks_defaults.h  sim_timing.h
src/include/test/: test_single_layer.cuh
src/include/test/bootstrapping/: bootstrapping.cuh
src/include/test/matrix_mul/: test_ct_ct_matrix_mul.cuh  test_ct_pt_matrix_mul.cuh
src/include/test/non_linear_func/: test_gelu.cuh  test_layernorm.cuh  test_silu.cuh  test_softmax.cuh
src/include/test/sim/: test_sim_primitives.cuh  test_sim_prng_evalkey_a.cuh
src/scripts/: bench_alpha_performance.sh  bench_ct_pt_proj_compare.sh  compare_single_layer_ctpt_proj.sh  export_ct_pt_kern_sum.py  gen_moai_keys.cu  gen_moai_keys.sh  parse_nsys_cuda_kern_sum.py  plot_ct_pt_mul_nvtx_compare.py  plot_ct_pt_proj_compare.py  plot_hybrid_ks_profile.py  profile_bootstrap_micro.sh  profile_ct_ct_micro.sh  profile_ct_pt_micro.sh  profile_ct_pt_pre_micro.sh  profile_gelu_micro.sh  profile_layernorm_micro.sh  profile_softmax_micro.sh  run_hybrid_ks_sweep_plots.sh
verilog/: GEMINI_MICROARCH_PROMPT_otf_evalkey_a_prng.md  OTF_EVK_A_BLOCK_DIAGRAM.md  block_word_issuer.sv  chunk_assembler.sv  keccak_f1600.sv  otf_evalkey_a_top.sv  otf_keygen_pkg.sv  reject_sampler_lane.sv  shake128_xof.sv  shake128_xof_block.sv  shake_block_to_word_fifo.sv  sync_fifo.sv  tb_otf_evalkey_a_top.sv  tb_otf_evalkey_a_top_vec.sv  tb_shake_block_to_word_fifo.sv
verilog/docs/: README_otf_keygen_rtl.md  README_otf_keygen_rtl_walkthrough.md  chunk_assembler.sv.md  keccak_f1600.sv.md  otf_evalkey_a_top.sv.md  otf_keygen_pkg.sv.md  reject_sampler_lane.sv.md  shake128_xof.sv.md  shake_block_to_word_fifo.sv.md  tb_otf_evalkey_a_top.sv.md
verilog/temp/: prng_descriptor_pack.sv  prng_engine_top.sv  shake128_xof_block_stub.sv  tb_prng_engine_top.sv
